<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/lime"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:background="@android:color/white"
                android:id="@+id/introduction"
                android:layout_width="match_parent"
                android:layout_height="355dp"
                android:padding="10dp"
                android:text="@string/q_and_a_round"
                android:textAlignment="center"
                android:textSize="17sp" />

            <LinearLayout
                style="@style/QuestionLayoutStyle"
                android:id="@+id/question_1">

                <TextView
                    android:id="@+id/Label_One"
                    style="@style/QuestionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/label_one" />

                <TextView
                    android:id="@+id/Question_One"
                    style="@style/QuestionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/question_one"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <CheckBox
                        android:id="@+id/q1_option_a"
                        style="@style/AnswerStyle"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_one" />

                    <CheckBox
                        android:id="@+id/q1_option_b"
                        style="@style/AnswerStyle"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="Man Dela" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <CheckBox
                        android:id="@+id/q1_option_c"
                        style="@style/AnswerStyle"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="Nelson Peters" />

                    <CheckBox
                        android:id="@+id/q1_option_d"
                        style="@style/AnswerStyle"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="Richard Nelson" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/QuestionLayoutStyle"
                android:id="@+id/question_2">

                <TextView
                    android:id="@+id/q2_Label_One"
                    style="@style/QuestionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/label_two" />

                <TextView
                    android:id="@+id/Question_Two"
                    style="@style/QuestionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/question_two"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:orientation="vertical"
                    android:textAlignment="center">

                    <RadioButton
                        android:id="@+id/q2_option_a"
                        style="@style/AnswerStyle"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Steve Hofmeyer" />

                    <RadioButton
                        android:id="@+id/q2_option_b"
                        style="@style/AnswerStyle"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="Steve Tswhete" />

                        <RadioButton
                            android:id="@+id/q2_option_c"
                            style="@style/AnswerStyle"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Stevie Wonder" />

                        <RadioButton
                            android:id="@+id/q2_option_d"
                            style="@style/AnswerStyle"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/answer_two" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                style="@style/QuestionLayoutStyle"
                android:id="@+id/question_3">

                <TextView
                    android:id="@+id/Label_3"
                    style="@style/QuestionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/label_three" />

                <TextView
                    android:id="@+id/Question_Three"
                    style="@style/QuestionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_three"/>

                <EditText
                    android:id="@+id/text_answer_3"
                    style="@style/AnswerStyle"
                    android:padding="15dp"
                    android:hint="@string/missing_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/question_4"
                android:text="@string/question_four"
                style="@style/QuestionLayoutStyle">

                <TextView
                    android:id="@+id/Label_Four"
                    style="@style/QuestionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/label_four" />

                <TextView
                    android:id="@+id/Question_Four"
                    style="@style/QuestionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <RadioButton
                        android:id="@+id/q4_option_a"
                        style="@style/AnswerStyle"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/is_true" />

                    <RadioButton
                        android:id="@+id/q4_option_b"
                        style="@style/AnswerStyle"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/is_false" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                style="@style/QuestionLayoutStyle"
                android:id="@+id/question_5">

                <TextView
                    android:id="@+id/Label_Five"
                    style="@style/QuestionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/label_five" />

                <TextView
                    android:id="@+id/Question_Five"
                    style="@style/QuestionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/question_five" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <CheckBox
                        android:id="@+id/q5_option_a"
                        style="@style/AnswerStyle"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="Peoples Bae" />

                    <CheckBox
                        android:id="@+id/q5_option_b"
                        style="@style/AnswerStyle"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="Floyd Shivhamvho" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <CheckBox
                        android:id="@+id/q5_option_c"
                        style="@style/AnswerStyle"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="Kader Asmaal" />

                    <CheckBox
                        android:id="@+id/q5_option_d"
                        style="@style/AnswerStyle"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="Shabir Shaik" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <CheckBox
                        android:id="@+id/q5_option_e"
                        style="@style/AnswerStyle"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="Hellen Zille" />

                    <CheckBox
                        android:id="@+id/q5_option_f"
                        style="@style/AnswerStyle"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_five" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/results"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:hint="@string/results_info"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textSize="17sp" />

            <Button
                android:id="@+id/answer"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SubmitAnswers"
                android:text="@string/answer_1" />

        </LinearLayout>
</ScrollView>